kubernetes/apps/kube-system/cilium/policies/allow-netbird-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# NetBird internal: all pods in netbird can talk to each other
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-netbird-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: netbird
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: netbird
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: netbird
